--- a/about.qmd
+++ b/about.qmd
@@ -4,8 +4,12 @@ title: "About"
 
 ### Introduction
 
-Thomas Allen is a UTD graduate student, pursuing a masters in Economics.
+Thomas Allen is a UTD graduate student, pursuing a masters in Economics
 
 ### Working Experience
 
-Senior financial analyst with 5 years of experience in cost and profitability analysis, process design, budgeting, forecasting, and managerial accounting. B.S. Finance and Economics, minor in Accounting.
+Senior financial analyst with 5 years of experience in cost and profitability analysis, process design, budgeting, forecasting, and managerial accounting. B.S. Finance and Economics, minor in Accounting
+
+```{r}
+1 + 1
+```
